tests/toy/neg/001673_mutation.toylang
program a = { while a while do sleep; } .
